2007-01-15 Igor Zelmanovich <igorz@mainsoft.com>

	* Menu.cs: added z-index attribute to popup div's.

2007-01-15  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* FileUpload.cs: fixed FileName property, should return filename
	without full path on client side

2007-01-15 Igor Zelmanovich <igorz@mainsoft.com>

	* TreeNode.cs
	considers INavigateUIData.NavigateUrl when bound.	

2007-01-15 Igor Zelmanovich <igorz@mainsoft.com>

	* CompleteWizardStep.cs
	* CreateUserWizard.cs
	* CreateUserWizardStep.cs
	* TemplatedWizardStep.cs
	* Wizard.cs
	make the design complied to .NET	
	build all possible controls at once and manage render by Visible property

2007-01-14 Eyal Alaluf <eyala@mainsoft.com>
	* Button.cs, HyperLink.cs, DataGrid.cs, ImageButton.cs, LinkButton.cs,
	  PagedDataSource.cs: Added J2EE Portal support for TARGET_J2EE.

2007-01-14  Ilya Kharmatsky <ilyak-at-mainsoft.com>
	* BaseCompareValidator
	* CompareValidator
	Added support for CultureInvariantValues property, which should be 
	counted in new 2.0 methods such as - Compare, Convert etc. The code
	has been changed in such way, that the old - 1.1 method implementation 
	could use the new methods defined for 2.0 version.

2007-01-10 Konstantin Triger <kostat@mainsoft.com>

	* XmlDataSource.cs: refactored to use cached collection.
	* SqlDataSource.cs: refactored to use cached collection;
		don't throw exception on 'DefaultView'.
	* ObjectDataSource.cs: refactored to use cached collection.

2007-01-10 Konstantin Triger <kostat@mainsoft.com>

        * ObjectDataSourceView.cs: consider parameter names and
			DataObjectMethodAttribute during method resolution.

2007-01-11  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* SqlDataSourceView.cs: fixed OnUpdating, OnInserting call with
	SqlDataSourceCommandEventArgs

2007-01-10 Konstantin Triger <kostat@mainsoft.com>

	* ObjectDataSourceView.cs: use case unsensitive comparer for
	 	parameters collection.

2007-01-10 Igor Zelmanovich <igorz@mainsoft.com>
