@@ -581,6 +581,7 @@ namespace System.Web.UI.WebControls {
 #if NET_2_0		
 		protected internal virtual void VerifyMultiSelect ()
 		{
+            throw new HttpException("Multi select is not supported");
 		}
 #endif		
 
