@@ -2,6 +2,14 @@
 
 	* Menu.cs: added z-index attribute to popup div's.
 
+2007-01-15 Ilya Kharmatsky  <ilya -at- decode-systems.com>
+
+	* ListControl.cs
+	* CheckBoxList.cs
+	* ListBox.cs
+	Implemented the protected net_2_0 method 'VerifyMultiSelect' with
+	proper overloading in derived types.
+ 
 2007-01-15  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* FileUpload.cs: fixed FileName property, should return filename
